# momblish

./: .coveragerc  .envrc  .python-version  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  Pipfile  README.md  README.rst  main.py  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/momblish/: __init__.py  cli.py  corpus.py  corpus_analyzer.py  momblish.py  skeleton.py
src/momblish/blacklists/: en
tests/: conftest.py  test_cli.py  test_corpus.py  test_corpus_analyzer.py  test_moblish.py  test_skeleton.py
