[build-system]
requires = [
    "hatchling>=1.27",
]
build-backend = "hatchling.build"

[project]
name = "momblish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
momble = "momblish.cli:main"

[dependency-groups]
dev = [
    "pytest>=9,<10",
]

[tool.pytest]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/momblish",
]
