[build-system]
requires = [
    "hatchling>=1.27",
]
build-backend = "hatchling.build"

[project]
name = "momblish"
version = "0.2.0"
description = "Generate nonsense words from a corpus using trigram analysis"
readme = "README.rst"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
momble = "momblish.cli:main"

[dependency-groups]
dev = [
    "pytest>=9,<10",
]

[tool.pytest]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/momblish",
]
